--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
       "no-underscore-dangle": "off",
       "import/prefer-default-export": "off",
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
+      "react-hooks/exhaustive-deps": "off",
       "react/jsx-props-no-spreading": "off",
     //   "react/prop-types": "off",
       "semi": "off",
