chose: reinitialize and reconfigure eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+    "settings": {
+        "react": {
+        "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true
@@ -14,16 +19,10 @@
         "ecmaVersion": 12,
         "sourceType": "module"
     },
-    "settings": {
-        "react": {
-        "version": "detect"
-        }
-    },
     "plugins": [
-        "react"
+        "react",
+        "html"
     ],
     "rules": {
-        "eol-last": "off",
-        "semi": "error"
     }
 }
