--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.4.0",
     "eslint-plugin-react": "^7.34.3",
+    "jsdom": "^24.1.0",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
