--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "cypress/globals": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -21,7 +22,8 @@
     },
     "plugins": [
         "react",
-        "html"
+        "html",
+        "cypress"
     ],
     "rules": {
     }
