--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "vitest",
     "e2e": "cypress run",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "ci:test": "vitest --no-watch && start-server-and-test dev tcp:5173 e2e"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
@@ -50,6 +51,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.1.0",
+    "start-server-and-test": "^2.0.4",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1",
